--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
@@ -360,6 +360,8 @@
     // Set new default font family and font color to mimic Bootstrap's default styling
     Chart.defaults.global.defaultFontFamily = '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
     Chart.defaults.global.defaultFontColor = '#292b2c';
+    Chart.defaults.global.defaultFontSize = 15;
+    Chart.defaults.global.defaultFontStyle = 'bold';
     
     
 
@@ -370,15 +372,24 @@
     type: 'bar',
     options: {
         legend: {
-            
             display: false
         },
         scales:{
             yAxes:[{
+                scaleLabel: {
+                    display: true,
+                    labelString: 'NUMBER OF PRESCHOOLERS',
+                },
                 ticks: {
                     beginAtZero: true,
                 }
-            }]
+            }],
+            xAxes:[{
+                scaleLabel: {
+                    display: true,
+                    labelString: 'NUTRIONAL STATUS',
+                }
+            }],
         }
     },
     data:{
