--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -209,6 +209,8 @@
     // Set new default font family and font color to mimic Bootstrap's default styling
     Chart.defaults.global.defaultFontFamily = '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
     Chart.defaults.global.defaultFontColor = '#292b2c';
+    Chart.defaults.global.defaultFontSize = 15;
+    Chart.defaults.global.defaultFontStyle = 'bold';
     
     
 
@@ -226,7 +228,17 @@
             yAxes:[{
                 ticks: {
                     beginAtZero: true,
-                }
+                },
+                scaleLabel: {
+                    display: true,
+                    labelString: 'NUMBER OF PRESCHOOLERS',
+                },
+            }],
+            xAxes:[{
+                scaleLabel: {
+                    display: true,
+                    labelString: 'NUTRITIONAL STATUS',
+                },
             }]
         }
     },
